--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-numpy
-opencv-utils
-opencv-python
+autopep8==1.6.0
+boto3==1.20.23
+botocore==1.23.23
+jmespath==0.10.0
+numpy==1.21.4
+opencv-python==4.5.4.60
+opencv-utils==0.0.2
+pycodestyle==2.8.0
+python-dateutil==2.8.2
+s3transfer==0.5.0
+simple-term-menu==1.4.1
+six==1.16.0
+toml==0.10.2
+urllib3==1.26.7
