--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 autopep8==1.6.0
 boto3==1.20.23
 botocore==1.23.23
+certifi==2021.10.8
+charset-normalizer==2.0.9
+idna==3.3
 jmespath==0.10.0
 numpy==1.21.4
 opencv-python==4.5.4.60
 opencv-utils==0.0.2
 pycodestyle==2.8.0
 python-dateutil==2.8.2
+requests==2.26.0
 s3transfer==0.5.0
 simple-term-menu==1.4.1
 six==1.16.0
