--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.20.23
 botocore==1.23.23
 certifi==2021.10.8
 charset-normalizer==2.0.9
+decorator==5.1.0
 idna==3.3
 jmespath==0.10.0
 numpy==1.21.4
@@ -16,3 +17,4 @@ simple-term-menu==1.4.1
 six==1.16.0
 toml==0.10.2
 urllib3==1.26.7
+validators==0.18.2
